# semistatic_cfr

./: .gitignore  README.md  pyproject.toml
semistatic_cfr/: agents.py  cfr.py  scfr.py  utils.py
semistatic_cfr/experiments/tournament_matrix/: main.py
semistatic_cfr/policies/: base.py
semistatic_cfr/policies/NES/: main.py
semistatic_cfr/policies/NES_bias/: main.py
semistatic_cfr/stats/: inference.py  main.py
